# capstone

./: Makefile  README.md  main.tf
cli/: cluster
docs/: index.yaml  (+15 more)
hub_router_warp/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.json
hub_router_warp/hub_router_ui/: index.html  package-lock.json  package.json  vite.config.ts
hub_router_warp/hub_router_ui/example-selenium-tests/: tests.js  tests.ts
hub_router_warp/hub_router_ui/hub_router_warp/: Cargo.toml
hub_router_warp/hub_router_ui/hub_router_warp/hub_router_ui/: .gitignore  index.html  package-lock.json
hub_router_warp/hub_router_ui/hub_router_warp/hub_router_ui/src/: AddHub.svelte  App.svelte  Hub.svelte  app.css
hub_router_warp/hub_router_ui/hub_router_warp/hub_router_ui/src/lib/: Hub.svelte  Node.svelte  data.ts
hub_router_warp/hub_router_ui/hub_router_warp/hubrouter_ui/: svelte.config.js
hub_router_warp/hub_router_ui/hub_router_warp/src/: api.rs  hub.rs
hub_router_warp/hub_router_ui/src/: AddHub.svelte  App.svelte  Configure.svelte  Hub.svelte  Logs.svelte  Modal.svelte  RemoveHub.svelte  app.css
hub_router_warp/hub_router_ui/src/assets/: edge.d2a278165ff8e7dcc4af17246954a0e1.svelte
hub_router_warp/hub_router_ui/src/lib/: Details.svelte  Session.svelte  data.ts
hub_router_warp/hub_router_ui/src/lib/Nav/: Nav.svelte
hub_router_warp/hubrouter_ui/: package-lock.json  package.json
hub_router_warp/hubrouter_ui/src/routes/: +page.svelte
hub_router_warp/src/: api.rs  conf.rs  error.rs  handler.rs  hub.rs  logger.rs  main.rs  routing.rs  schema.rs  state.rs  ui.rs  utils.rs
(+71 files in other folders)
