[package]
name = "hub_router_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
dashmap = "5.4.0"
regex = "1.7.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
config = "0.13.3"
warp = "0.3.3"
url = "2.3.1"
serde_yaml = "0.9.21"
rust-embed = "6.6.1"
